2011-06-28  Csaba Osztrogonác  <ossy@webkit.org>

        [Qt] http/tests/misc/link-rel-icon-beforeload.html is flakey
        https://bugs.webkit.org/show_bug.cgi?id=63518

        * platform/qt/Skipped: Add http/tests/misc/link-rel-icon-beforeload.html until fix.

2011-06-28  Csaba Osztrogonác  <ossy@webkit.org>

        [Qt] Unreviewed daily gardening. Add platform specific expected files
        for new passing tests and add failing new tests to the Skipped list.

        * platform/qt/Skipped:
        * platform/qt/editing/selection/extend-inside-transforms-backward-expected.png: Added.
        * platform/qt/editing/selection/extend-inside-transforms-backward-expected.txt: Added.
        * platform/qt/editing/selection/extend-inside-transforms-forward-expected.png: Added.
        * platform/qt/editing/selection/extend-inside-transforms-forward-expected.txt: Added.
        * platform/qt/fast/borders/only-one-border-with-width-expected.png: Added.
        * platform/qt/fast/borders/only-one-border-with-width-expected.txt: Added.
        * platform/qt/fast/css/color-leakage-expected.png: Added.
        * platform/qt/fast/css/color-leakage-expected.txt: Added.
        * platform/qt/fast/dom/HTMLProgressElement/indeterminate-progress-001-expected.png: Added.
        * platform/qt/fast/dom/HTMLProgressElement/indeterminate-progress-001-expected.txt: Added.
        * platform/qt/fast/inline/inline-wrap-with-parent-padding-expected.png: Added.
        * platform/qt/fast/inline/inline-wrap-with-parent-padding-expected.txt: Added.
        * platform/qt/fast/multicol/span/span-as-nested-inline-block-child-expected.png: Added.
        * platform/qt/fast/multicol/span/span-as-nested-inline-block-child-expected.txt: Added.
        * platform/qt/http/tests/misc/object-embedding-svg-delayed-size-negotiation-2-expected.png: Added.
        * platform/qt/http/tests/misc/object-embedding-svg-delayed-size-negotiation-2-expected.txt: Added.