@@ -1495,7 +1495,6 @@ plugins/embed-prefers-plugins-for-images.html
 plugins/mouse-events-fixedpos.html
 plugins/netscape-dom-access.html
 plugins/npp-set-window-called-during-destruction.html
-plugins/plugin-javascript-access.html
 plugins/reloadplugins-and-pages.html
 plugins/destroy-stream-twice.html
 plugins/object-embed-plugin-scripting.html
