@@ -1,3 +1,14 @@
+2011-06-28  Balazs Kelemen  <kbalazs@webkit.org>
+
+        Reviewed by Kenneth Rohde Christiansen.
+
+        [X11][WK2] plugins/plugin-javascript-access fails
+        https://bugs.webkit.org/show_bug.cgi?id=63464
+
+        * Shared/Plugins/Netscape/x11/NetscapePluginModuleX11.cpp:
+        (WebKit::NetscapePluginModule::getPluginInfo):
+        Determine the name of the plugin.
+
 2011-06-27  Yuta Kitamura  <yutak@chromium.org>
 
         Reviewed by Alexey Proskuryakov.
