@@ -1,3 +1,12 @@
+2011-06-28  Balazs Kelemen  <kbalazs@webkit.org>
+
+        Reviewed by Kenneth Rohde Christiansen.
+
+        [X11][WK2] plugins/plugin-javascript-access fails
+        https://bugs.webkit.org/show_bug.cgi?id=63464
+
+        * platform/qt-wk2/Skipped:
+
 2011-06-28  Csaba Osztrogonác  <ossy@webkit.org>
 
         [Qt] http/tests/misc/link-rel-icon-beforeload.html is flakey
